# rdtools

./: .flake8  .git-blame-ignore-revs  .gitignore  .pixi.lnk  CITATION.cff  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements-min.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: nbval.yaml  pytest.yaml
.pixi/: config.toml
docs/: Multi-year_on_year_example.ipynb  TrendAnalysis_example.ipynb  TrendAnalysis_example_NSRDB.ipynb  TrendAnalysis_hybrid_example.ipynb  degradation_and_soiling_example.ipynb  hybrid_degradation_example.ipynb  nbval_sanitization_rules.cfg  notebook_requirements.txt  soiling_options_comparison_v2.ipynb  soiling_options_guide.ipynb  system_availability_example.ipynb
docs/sphinx/source/: api.rst  changelog.rst  conf.py  developer_notes.rst  examples.rst  index.rst
docs/sphinx/source/changelog/: pending.rst  v2.0.0.rst  v3.0.0.rst  v3.1.0.rst  v3.1.1.rst  v3.2.0.rst  v3.2.1.rst
docs/sphinx/source/examples/: Multi-year_on_year_example.nblink  soiling_options_guide.nblink
rdtools/: __init__.py  analysis_chains.py  degradation.py  filtering.py  normalization.py  plotting.py  soiling.py
rdtools/test/: analysis_chains_test.py  conftest.py  degradation_test.py  filtering_test.py  plotting_test.py  soiling_cods_test.py  soiling_test.py
scripts/: check_dependencies.py
