[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rdtools"
dynamic = ["version"]
description = "Functions for reproducible timeseries analysis of photovoltaic systems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rdtools Python Developers", email = "RdTools@nlr.gov"},
]
maintainers = [
    {email = "RdTools@nlr.gov"},
]
keywords = [
    "photovoltaic",
    "solar",
    "analytics",
    "analysis",
    "performance",
    "degradation",
    "PV",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib >= 3.5.3",
    "numpy >= 1.22.4",
    "pandas >= 1.4.4",
    "statsmodels >= 0.13.5",
    "scipy >= 1.8.1",
    "h5py >= 3.7.0",
    "plotly >= 4.0.0",
    "xgboost >= 1.6.0",
    "pvlib >= 0.12.0",
    "scikit-learn >= 1.1.3, != 1.6.0",
    "arch >= 5.0",
    "filterpy >= 1.4.2",
]

[project.optional-dependencies]
doc = [
    "sphinx==7.4.7",
    "nbsphinx==0.9.5",
    "nbsphinx-link==1.3.1",
    "sphinx_rtd_theme==3.0.1",
    "ipython",
    "sphinx-gallery==0.18.0",
]
test = [
    "pytest >= 3.10.1",
    "pytest-cov",
    "coverage",
    "flake8",
    "nbval >= 0.10.0",
    "pytest-mock",
]
all = [
    "coverage",
    "flake8",
    "ipython",
    "nbsphinx==0.9.5",
    "nbsphinx-link==1.3.1",
    "nbval >= 0.10.0",
    "pytest >= 3.10.1",
    "pytest-cov",
    "pytest-mock",
    "sphinx==7.4.7",
    "sphinx-gallery==0.18.0",
    "sphinx_rtd_theme==3.0.1",
]

[project.urls]
Homepage = "https://github.com/NatLabRockies/rdtools"
"Bug Tracker" = "https://github.com/NatLabRockies/rdtools/issues"
Documentation = "https://rdtools.readthedocs.io/"
"Source Code" = "https://github.com/NatLabRockies/rdtools"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["rdtools*"]

[tool.setuptools.package-data]
rdtools = ["data/*", "models/*"]

[tool.pytest.ini_options]
addopts = "--verbose"
filterwarnings = [
    "ignore:The .* module is currently experimental:UserWarning:rdtools",
]
