[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rdtools"
dynamic = ["version"]
description = "Functions for reproducible timeseries analysis of photovoltaic systems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rdtools Python Developers", email = "RdTools@nlr.gov"},
]
maintainers = [
    {email = "RdTools@nlr.gov"},
]
keywords = [
    "photovoltaic",
    "solar",
    "analytics",
    "analysis",
    "performance",
    "degradation",
    "PV",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib >= 3.5.3",
    "numpy >= 1.22.4",
    "pandas >= 1.4.4",
    "statsmodels >= 0.13.5",
    "scipy >= 1.8.1",
    "h5py >= 3.7.0",
    "plotly >= 4.0.0",
    "xgboost >= 1.7.0",
    "pvlib >= 0.13.1",
    "scikit-learn >= 1.1.3, != 1.6.0",
    "arch >= 5.6",
    "filterpy >= 1.4.2",
]

[project.optional-dependencies]
doc = [
    "sphinx==7.4.7",
    "nbsphinx==0.9.5",
    "nbsphinx-link==1.3.1",
    "sphinx_rtd_theme==3.0.1",
    "ipython",
    "sphinx-gallery==0.18.0",
]
test = [
    "pytest >= 3.10.1",
    "pytest-cov",
    "coverage",
    "flake8",
    "nbval >= 0.10.0",
    "pytest-mock",
]
notebooks = [
    "jupyter",
    "ipywidgets",
    "numexpr >= 2.10.2",
    "tabulate >= 0.9.0",
    "lxml",
]
dev = [
    "rdtools[notebooks,test]",
]
all = [
    "rdtools[dev,doc]",
]

[project.urls]
Homepage = "https://github.com/NatLabRockies/rdtools"
"Bug Tracker" = "https://github.com/NatLabRockies/rdtools/issues"
Documentation = "https://rdtools.readthedocs.io/"
"Source Code" = "https://github.com/NatLabRockies/rdtools"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["rdtools*"]

[tool.setuptools.package-data]
rdtools = ["data/*", "models/*"]

[tool.pytest.ini_options]
addopts = "--verbose"
filterwarnings = [
    "ignore:The .* module is currently experimental:UserWarning:rdtools",
]

# --- Pixi configuration ---

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
rdtools = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10"

# --- Python version features ---

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"

[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"

[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"

[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"

# --- Extra features ---

[tool.pixi.feature.notebooks.pypi-dependencies]
rdtools = { path = ".", editable = true, extras = ["notebooks"] }

[tool.pixi.feature.test.pypi-dependencies]
rdtools = { path = ".", editable = true, extras = ["test"] }

[tool.pixi.feature.dev.pypi-dependencies]
rdtools = { path = ".", editable = true, extras = ["dev"] }

# Minimum version pins (matching lower bounds in [project.dependencies])
[tool.pixi.feature.min.pypi-dependencies]
matplotlib = "==3.5.3"
numpy = "==1.22.4"
pandas = "==1.4.4"
statsmodels = "==0.13.5"
scipy = "==1.8.1"
h5py = "==3.7.0"
plotly = "==4.0.0"
xgboost = "==1.7.0.post0"
pvlib = "==0.13.1"
scikit-learn = "==1.1.3"
arch = "==5.6.0"
filterpy = "==1.4.2"

# --- Environments ---

[tool.pixi.environments]
core = { features = ["py313"], solve-group = "default" }
default = { features = ["notebooks", "py313"], solve-group = "default" }
dev = { features = ["dev", "py313"], solve-group = "default" }
dev-py310 = { features = ["dev", "py310"] }
dev-py311 = { features = ["dev", "py311"] }
dev-py312 = { features = ["dev", "py312"] }
dev-py313 = { features = ["dev", "py313"], solve-group = "default" }
dev-py314 = { features = ["dev", "py314"] }
dev-min = { features = ["test", "min", "py310"] }

# --- Tasks ---

[tool.pixi.tasks]

[tool.pixi.feature.notebooks.tasks]
lab = "jupyter lab docs/"

[tool.pixi.feature.test.tasks]
test = "pytest --cov=rdtools --cov-report=xml rdtools/test/"

[tool.pixi.feature.dev.tasks]
lab = "jupyter lab docs/"
test = "pytest --cov=rdtools --cov-report=xml rdtools/test/"
nbval = "pytest --nbval --nbval-sanitize-with docs/nbval_sanitization_rules.cfg docs/"
